--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "17.0.1",
     "react-switch": "^6.0.0",
     "styled-components": "^5.2.1",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "use-persisted-state": "^0.3.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.25",
@@ -23,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "babel-plugin-inline-react-svg": "^1.1.2",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-config-standard": "^16.0.2",
